2-infra/dev/argocd/ingress-nginx.yaml
# https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#kubernetesingress-nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-https
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer # name of cluster issuer
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # for redirect loop or 307 response code
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx # minikube
  rules:
    - host: argocd.minikube.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - secretName: argocd-tls
      hosts:
        - argocd.minikube.io
